# baseline-lab

./: .gitignore  README.md  pyproject.toml  settings.py
helper/: openAI.py  s3.py
service/: upload.py
