[tool.poetry]
name = "baseline-lab"
version = "0.1.0"
description = ""
authors = ["Sunjung-Dev <sun17789@swu.ac.kr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.78.0"
boto3 = "^1.38.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-upload = "service.upload:UploadService"
